# lsr

./: Cargo.toml  LICENSE  README.md  REFERENCES.md
src/: lib.rs  main.rs
src/cmd/: cli.rs
src/path/: format.rs  mod.rs  paths.rs  permissions.rs
src/size/: constants.rs  convenience.rs  mod.rs  tests.rs
