[package]
name = "lsr"
version = "0.1.0"
authors = ["Christopher Schneider <schneiderchristopher16@gmail.com>"]
license = "MIT"
description = "LS Implementation in Rust"
readme = "README.md"
homepage = "https://github.com/schneiderchristopher/lsr"
repository = "https://github.com/schneiderchristopher/lsr"
keywords = ["ls", "cli"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.0.0"